--- a/DoAnMon/Views/ClassRooms/_MessagePartial.cshtml
+++ b/DoAnMon/Views/ClassRooms/_MessagePartial.cshtml
@@ -11,20 +11,13 @@
     {
         var chat = listmsg[i];
         CustomUser chattinguser = _userManager.FindByIdAsync(chat.UserId).Result;
-        <li style="font-size: 17px;">
-            <strong>@chattinguser.Mssv _ @chattinguser.Name (@chat.Time):</strong> @chat.Noidung
-            @if (chat.FileAttachments != null && chat.FileAttachments.Any())
+        <li style="font-size: 17px;"><strong>@chattinguser.Mssv _ @chattinguser.Name (@chat.Time):</strong> @chat.Noidung
+            @if (!string.IsNullOrEmpty(chat.FilePath))
             {
-                <ul>
-                    @foreach (var file in chat.FileAttachments)
-                    {
-                        <li>
-                            <a href="@file.FilePath" target="_blank">@file.FileName</a>
-                        </li>
-                    }
-                </ul>
+                <a href="@Url.Content(chat.FilePath)" target="_blank">[Open File]</a>
             }
+
         </li>
-    }
+	}
 }
 
