--- a/DoAnMon/Views/ClassRooms/_MessagePartial.cshtml
+++ b/DoAnMon/Views/ClassRooms/_MessagePartial.cshtml
@@ -14,7 +14,7 @@
         <li style="font-size: 17px;"><strong>@chattinguser.Mssv _ @chattinguser.Name (@chat.Time):</strong> @chat.Noidung
             @if (!string.IsNullOrEmpty(chat.FilePath))
             {
-                <a href="@Url.Content(chat.FilePath)" target="_blank">[Open File]</a>
+                <a href="@Url.Content(chat.FilePath)" target="_blank">[Download File]</a>
             }
 
         </li>
