--- a/DoAnMon/Views/ClassRooms/Details.cshtml
+++ b/DoAnMon/Views/ClassRooms/Details.cshtml
@@ -1055,59 +1055,73 @@
 			</div>
 
 		}
-	}
-	@foreach (var post in Model.Post)
+	}	
+	
+	 @foreach (var post in Model.Post)
 	{
 		<div class="create-content"
 				style="border: 1px solid rgb(145, 137, 137);
-			border-radius: 8px;
-			padding: 10px;
-			height: 100%;
-			margin: 20px;
-			display: flex;
-			align-items: center;
-			position: relative;">
+		border-radius: 8px;
+		padding: 10px;
+		height: 100%;
+		margin: 20px;
+		display: flex;
+		align-items: center;
+		position: relative;">
 
-			<div style="background-color: rgb(66, 133, 244); border-radius: 50%; width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; margin-right: 10px; margin-left: 20px;">
+			<div id="circle-icon-@post.Id" class="circle-icon" style="background-color: rgb(66, 133, 244); border-radius: 50%; width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; margin-right: 10px; margin-left: 20px;">
 				<svg focusable="false" width="24" height="24" viewBox="0 0 24 24" class="NMm5M hhikbc" style="fill: white;">
 					<path d="M7 15h7v2H7zm0-4h10v2H7zm0-4h10v2H7z"></path>
 					<path d="M19 3h-4.18C14.4 1.84 13.3 1 12 1c-1.3 0-2.4.84-2.82 2H5c-.14 0-.27.01-.4.04a2.008 2.008 0 0 0-1.44 1.19c-.1.23-.16.49-.16.77v14c0 .27.06.54.16.78s.25.45.43.64c.27.27.62.47 1.01.55.13.02.26.03.4.03h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7-.25c.41 0 .75.34.75.75s-.34.75-.75.75-.75-.34-.75-.75.34-.75.75-.75zM19 19H5V5h14v14z"></path>
 				</svg>
 			</div>
-			
+
 			<!-- Phần chứa tiêu đề và thời gian -->
-			<div style="display: flex; flex-direction: column; margin-left: 10px; margin-top: -3.5px;">
+			<div id="post-info-@post.Id" style="display: flex; flex-direction: column; margin-left: 10px; margin-top: -3.5px;">
 				<!-- Đặt bố cục theo cột -->
-				<h3 style="font-size: 16px; margin-bottom: 0px;">
-					@Model.Owner.Name đã đăng một thông báo mới: @post.Title
-				</h3>
-				<p class="" style="font-size: 16px; margin-bottom: 0px;">
-					@post.Content
-				</p>
-				<p class="post-created-at"
-					style="font-size: 14px; color: gray; margin-top: 0px;">
-					@post.CreateTime.ToString("dd/MM/yyyy")
-				</p>
+				<h3 style="font-size: 16px; margin-bottom: 0px;">@Model.Owner.Name đã đăng một thông báo mới: @post.Title</h3>
+				<p class="" style="font-size: 16px; margin-bottom: 0px;">@post.Content</p>
+				<p class="post-created-at" style="font-size: 14px; color: gray; margin-top: 0px;">@post.CreateTime.ToString("dd/MM/yyyy - HH:mm:ss")</p>
 			</div>
-			<div style="margin-left: auto; cursor: pointer; display: flex; align-items: center; height: 100%;">
-				<button class="icon">
-					<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<circle cx="12" cy="5" r="2" fill="gray"></circle>
-						<circle cx="12" cy="12" r="2" fill="gray"></circle>
-						<circle cx="12" cy="19" r="2" fill="gray"></circle>
-					</svg>
-				</button>
-				<div class="options-menu" style="display: none;padding:10px; top: 85px; right:40px; position: absolute; background-color: white; border: 1px solid gray; border-radius: 5px; z-index: 10;">
-					<a class="btn" asp-action="Edit" asp-controller="Posts" asp-route-id="@post.Id" asp-route-classId="@post.ClassRoomId">Sửa</a>
-					<a class="btn" asp-action="Delete" asp-controller="Posts" asp-route-id="@post.Id" asp-route-classId="@post.ClassRoomId" onclick="return confirm('Bạn có chắc muốn xóa không ?')">Xóa</a>
-				</div>
-			</div>
+			@{
+				if (Model.isOwner)
+				{
+					<div style="margin-left: auto; cursor: pointer; display: flex; align-items: center; height: 100%;">
+						<button id="post-options-@post.Id" class="icon">
+							<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<circle cx="12" cy="5" r="2" fill="gray"></circle>
+								<circle cx="12" cy="12" r="2" fill="gray"></circle>
+								<circle cx="12" cy="19" r="2" fill="gray"></circle>
+							</svg>
+						</button>
+						<div class="options-menu" style="display: none;padding:10px; top: 85px; right:40px; position: absolute; background-color: white; border: 1px solid gray; border-radius: 5px; z-index: 10;">
+							<a class="btn" href="javascript:void(0);" onclick="showEditForm('@post.Id')">Sửa</a>
+							<a class="btn" asp-action="Delete" asp-controller="Posts" asp-route-id="@post.Id" asp-route-classId="@post.ClassRoomId" onclick="return confirm('Bạn có chắc muốn xóa không ?')">Xóa</a>
+						</div>
+					</div>
+					<!-- Form ẩn để chỉnh sửa bài viết -->
+					<div id="editForm-@post.Id" style="display: none; margin-top: 10px; width: 100%;">
+						<form action="/Posts/Editpost" method="POST">
+							<input type="hidden" name="Id" value="@post.Id" />
+							<input type="text" name="Title" value="@post.Title" class="form-control" placeholder="Nhập tiêu đề" style="margin-bottom: 10px;" />
+							<textarea name="Content" rows="4" class="input-textarea" style="width: 100%; border-radius: 5px; margin-top: 10px; padding: 10px;" placeholder="Nhập nội dung">@post.Content</textarea>
+							<div style="display: flex; justify-content: flex-end; margin-top: 10px;">
+								<button type="button" onclick="hideEditForm('@post.Id')" style="margin-right: 10px;">Hủy</button>
+								<button type="submit" class="btn btn-success">Lưu</button>
+							</div>
+							<input type="hidden" name="ClassId" id="classIdInput" value="@Model.ClassRoom.Id" />
+						</form>
+					</div>
+				}
+			}
 		</div>
+					
 	}
+			
 	@foreach (var assignment in Model.Homework.ToList())
 	{
 		<div class="create-content"
-			 style="border: 1px solid rgb(145, 137, 137);
+			style="border: 1px solid rgb(145, 137, 137);
 			border-radius: 8px;
 			padding: 10px;
 			height: 100%;
@@ -1121,7 +1135,7 @@
 					<path d="M19 3h-4.18C14.4 1.84 13.3 1 12 1c-1.3 0-2.4.84-2.82 2H5c-.14 0-.27.01-.4.04a2.008 2.008 0 0 0-1.44 1.19c-.1.23-.16.49-.16.77v14c0 .27.06.54.16.78s.25.45.43.64c.27.27.62.47 1.01.55.13.02.26.03.4.03h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7-.25c.41 0 .75.34.75.75s-.34.75-.75.75-.75-.34-.75-.75.34-.75.75-.75zM19 19H5V5h14v14z"></path>
 				</svg>
 			</div>
-			
+
 			<!-- Phần chứa tiêu đề và thời gian -->
 			<div style="display: flex; flex-direction: column; margin-left: 10px; margin-top: -3.5px;">
 				<!-- Đặt bố cục theo cột -->
@@ -1129,31 +1143,86 @@
 					@Model.Owner.Name đã đăng một bài tập mới: @assignment.Title
 				</h3>
 				<p class="post-created-at"
-				   style="font-size: 14px; color: gray; margin-top: 0px;">
-					@assignment.CreatedAt.ToString("dd/MM/yyyy")
+					style="font-size: 14px; color: gray; margin-top: 0px;">
+					@assignment.CreatedAt.ToString("dd/MM/yyyy - HH:mm:ss")
 				</p>
 			</div>
 
-			<div style="margin-left: auto; cursor: pointer; display: flex; align-items: center; height: 100%;">
+			@*<div style="margin-left: auto; cursor: pointer; display: flex; align-items: center; height: 100%;">
 				<button class="icon">
-					<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<circle cx="12" cy="5" r="2" fill="gray"></circle>
-						<circle cx="12" cy="12" r="2" fill="gray"></circle>
-						<circle cx="12" cy="19" r="2" fill="gray"></circle>
-					</svg>
+				<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<circle cx="12" cy="5" r="2" fill="gray"></circle>
+				<circle cx="12" cy="12" r="2" fill="gray"></circle>
+				<circle cx="12" cy="19" r="2" fill="gray"></circle>
+				</svg>
 				</button>
 				<div class="options-menu" style="display: none;padding:10px; top: 85px; right:40px; position: absolute; background-color: white; border: 1px solid gray; border-radius: 5px; z-index: 10;">
-					<button class="option-button">Sửa</button>
-					<button class="option-button">Xóa</button>
+				<button class="option-button">Sửa</button>
+				<button class="option-button">Xóa</button>
 				</div>
-			</div>
+				</div>*@
 		</div>
-	}
+			
+	}		
+	
 </div>
 
 @* ==================================SCRIPT======================================================*@
 
+<script>
+	function showEditForm(postId) {
+		// Ẩn tất cả các form chỉnh sửa khác
+		var forms = document.querySelectorAll('[id^="editForm-"]');
+		forms.forEach(function (form) {
+			form.style.display = 'none';
+		});
 
+		// Hiển thị form chỉnh sửa cho bài viết cụ thể
+		var editForm = document.getElementById('editForm-' + postId);
+		if (editForm) {
+			editForm.style.display = 'block';
+		}
+
+		// Ẩn icon và phần thông tin của bài viết khi hiển thị form
+
+		var circleIcon = document.getElementById('circle-icon-' + postId);
+		var postInfo = document.getElementById('post-info-' + postId);
+		var postOptions = document.getElementById('post-options-' + postId);
+
+		if (circleIcon) {
+			circleIcon.style.display = 'none';
+		}
+		if (postInfo) {
+			postInfo.style.display = 'none';
+		}
+		if (postOptions) {
+			postOptions.style.display = 'none';
+		}
+	}
+
+	function hideEditForm(postId) {
+		// Ẩn form chỉnh sửa khi người dùng nhấn nút Hủy
+		var editForm = document.getElementById('editForm-' + postId);
+		if (editForm) {
+			editForm.style.display = 'none';
+		}
+
+		// Hiển thị lại icon và phần thông tin của bài viết khi ẩn form
+		var circleIcon = document.getElementById('circle-icon-' + postId);
+		var postInfo = document.getElementById('post-info-' + postId);
+		var postOptions = document.getElementById('post-options-' + postId);
+
+		if (circleIcon) {
+			circleIcon.style.display = 'flex'; // Đặt lại display thành flex
+		}
+		if (postInfo) {
+			postInfo.style.display = 'flex'; // Đặt lại display thành flex
+		}
+		if (postOptions) {
+			postOptions.style.display = 'flex';
+		}
+	}
+</script>
 <script>
 	const iconButtons = document.querySelectorAll('.icon'); // Chọn tất cả các phần tử có class "icon"
 
